[package]
name = "aerugo-cache"
version = "0.1.0"
edition = "2021"
description = "A small Redis-compatible in-memory cache written in Rust for learning async systems programming."
license = "MIT"
readme = "README.md"
repository = "https://github.com/LorenzoVicino/aerugo-cache"
keywords = ["redis", "cache", "tokio", "database", "learning"]
categories = ["command-line-utilities", "database-implementations"]

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
thiserror = "2.0"
tokio = { version = "1.38", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "storage"
harness = false
